--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "debug": ">=2.6.9",
     "express": "^4.17.1",
     "i18n": "0.8.3",
-    "pug": "^2.0.4",
+    "mongoose": "^8.9.0",
     "morgan": ">=1.9.1",
+    "pug": "^2.0.4",
     "serve-favicon": "^2.5.0"
   },
   "homepage": "https://github.com/anders94/blockchain-demo#readme",
